[build-system]
requires = ["setuptools>=61.0", "cmake>=3.18"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["memilio", "memilio.epidata", "memilio.epidata_test"]

[project]
name = "memilio-simulation"
version = "1.0.0"
readme = "README.rst"
authors = [{name = "DLR-SC", email = "daniel.abele@dlr.de"}]
maintainers = [{email = "martin.kuehn@dlr.de"}]
description = "Part of MEmilio project, python bindings to the C++ libraries that contain the models and simulations."

[project.optional-dependencies]
dev = ["numpy>=1.22,<1.25",
    "pandas>=2.0.0"]

[project.urls] 
Repository = "https://github.com/SciCompMod/memilio"
Issues = "https://github.com/SciCompMod/memilio/issues"