[build-system]
requires = [
  "scikit-build-core>=0.9.0",
  "setuptools>=68",
  "wheel"
]
build-backend = "scikit_build_core.build"

[project]
name = "memilio-simulation"
version = "1.0.0"
description = "Part of MEmilio project, python bindings to the C++ libraries that contain the models and simulations."
readme = "README.md"
requires-python = ">=3.9"
license = { text = "Apache-2.0" }
authors = [{ name = "MEmilio Team" }]
maintainers = [
  { email = "martin.kuehn@dlr.de" }
]
dependencies = []

[project.optional-dependencies]
dev = [
  "numpy>=1.22,<1.25",
  "pandas>=2.0.0"
]

[project.urls]
Homepage = "https://github.com/SciCompMod/memilio"
Team = "https://memilio.readthedocs.io/en/latest/team.html"

[tool.scikit-build]
cmake.minimum-version = "3.13"
cmake.args = ["-DMEMILIO_BUILD_SHARED_LIBS:BOOL=ON"]
wheel.packages = ["memilio"]
