add_library(abm
    location.cpp
    location.h
    location_id.h
    household.cpp
    household.h
    result_simulation.h
    simulation.cpp
    simulation.h
    person.cpp
    person.h
    person_id.h
    personal_rng.cpp
    personal_rng.h
    testing_strategy.cpp
    testing_strategy.h
    model.cpp
    model.h
    location_type.h
    parameters.h
    parameters.cpp
    mobility_rules.cpp
    mobility_rules.h
    model_functions.cpp
    model_functions.h
    trip_list.cpp
    trip_list.h
    lockdown_rules.cpp
    lockdown_rules.h
    infection.cpp
    infection.h
    infection_state.h
    virus_variant.h
    protection_event.h
    mask.h
    mask.cpp
    common_abm_loggers.h
    city_builder.h
    city_builder.cpp
    city_parameters.h
)
target_link_libraries(abm PUBLIC memilio)
target_include_directories(abm PUBLIC
    $<BUILD_INTERFACE:${CMAKE_CURRENT_SOURCE_DIR}/..>
    $<INSTALL_INTERFACE:${CMAKE_INSTALL_INCLUDEDIR}>
)
target_compile_options(abm PRIVATE ${MEMILIO_CXX_FLAGS_ENABLE_WARNING_ERRORS})
